# hello-discord

./: .env.example  .gitignore  Cargo.toml  README.md  plan.md  summary.md
.zed/: settings.json
src/: bot.rs  events.rs  gateway.rs  handlers.rs  http.rs  lib.rs  main.rs  soul.md  types.rs
src/bot/: bot.rs  discord_beet_map.rs  mod.rs  on_guild_create.rs  on_presence_update.rs
src/common_handlers/: bot_channel.rs  bot_state.rs  mod.rs  on_guild_create.rs  on_interaction.rs  on_message.rs  on_presence_update.rs  on_ready.rs
src/common_handlers/command_demo/: greet_state.rs  handle_interaction.rs  mod.rs  parse_bang_command.rs  register_commands.rs
src/discord_helpers/: builders.rs  mod.rs
src/discord_io/: bot.rs  gateway.rs  gateway_listener.rs  handlers.rs  http.rs  mod.rs
src/discord_types/: builders.rs  custom.rs  discord_query.rs  events.rs  ext.rs  mod.rs  requests.rs  test.rs  visitor.rs
src/discord_types/application/: emoji.rs
src/discord_types/application/command/: mod.rs  option.rs  permissions.rs
src/discord_types/application/interaction/: interaction_type.rs  message_component.rs  metadata.rs  mod.rs  resolved.rs
src/discord_types/application/monetization/: entitlement.rs  sku.rs
src/discord_types/channel/: attachment.rs  channel_mention.rs  followed_channel.rs  forum.rs  mod.rs  permission_overwrite.rs
src/discord_types/channel/message/: allowed_mentions.rs  application.rs  call.rs  flags.rs  interaction.rs  kind.rs  mention.rs  message_pin.rs  mod.rs  pins_listing.rs  reaction.rs  reference.rs  role_subscription_data.rs  snapshot.rs
src/discord_types/channel/stage_instance/: mod.rs
src/discord_types/channel/thread/: auto_archive_duration.rs  listing.rs  member.rs  metadata.rs
src/discord_types/channel/webhook/: channel.rs  guild.rs  mod.rs
src/discord_types/custom/: events.rs  misc.rs  mod.rs
src/discord_types/gateway/: frame.rs  id.rs  reaction.rs
src/discord_types/gateway/connection_info/: bot_connection_info.rs
src/discord_types/gateway/event/: gateway.rs  mod.rs
src/discord_types/gateway/presence/: activity.rs  activity_button.rs  client_status.rs  mod.rs
src/discord_types/guild/: afk_timeout.rs  ban.rs  emoji.rs  info.rs  integration.rs  integration_application.rs  member.rs  member_flags.rs  mod.rs  partial_guild.rs  partial_member.rs  preview.rs  role.rs  role_position.rs  role_tags.rs  unavailable_guild.rs
src/discord_types/guild/audit_log/: change.rs  change_key.rs  entry.rs  (+3 more)
src/discord_types/http/: channel_position.rs  interaction.rs  permission_overwrite.rs
src/discord_types/id/: mod.rs
src/discord_types/oauth/: application.rs  current_authorization_information.rs  install_params.rs  partial_application.rs
src/discord_types/poll/: answer.rs  media.rs  mod.rs
src/discord_types/user/: avatar_decoration_data.rs  connection.rs  current_user.rs  current_user_guild.rs  mod.rs  primary_guild.rs
src/discord_types/util/: mod.rs
src/discord_types/voice/: voice_state.rs
src/request_types/: mod.rs  requests.rs  requests_channels.rs  requests_guilds.rs  requests_interactions.rs  requests_misc.rs
src/tl_gateway/: mod.rs
src/tw_gateway/: mod.rs
src/tw_http/: mod.rs
src/types/: builders.rs  custom.rs  ext.rs  mod.rs  test.rs  visitor.rs
src/types/application/: emoji.rs
src/types/channel/: attachment.rs  channel_mention.rs  followed_channel.rs  forum.rs  mod.rs  permission_overwrite.rs
src/types/gateway/: reaction.rs
src/types/guild/: ban.rs  emoji.rs  info.rs  integration.rs  integration_application.rs  member.rs  mod.rs  partial_guild.rs  partial_member.rs  preview.rs  role.rs  role_position.rs  role_tags.rs  unavailable_guild.rs
src/types/http/: attachment.rs  channel_position.rs  interaction.rs  permission_overwrite.rs
src/types/id/: marker.rs
src/types/oauth/: application.rs  application_flags.rs  current_authorization_information.rs  install_params.rs  partial_application.rs
src/types/poll/: answer.rs  media.rs  mod.rs
src/types/user/: avatar_decoration_data.rs  connection.rs  current_user.rs  current_user_guild.rs  mod.rs  primary_guild.rs
src/types/util/: image_hash.rs
src/types/voice/: voice_state.rs
(+263 files in other folders)
