[package]
name = "hello-discord"
version = "0.1.0"
edition = "2021"

[lib]
name = "hello_discord"
path = "src/lib.rs"

[features]
default = ["rustls-tls"]
native-tls = ["beet/native-tls"]
rustls-tls = ["beet/rustls-tls"]
## Enable oauth, poll, voice, and other large twilight-model modules we don't
## currently use. Without this, only the core types (id, user, channel, guild,
## application, http, gateway/presence, util) are compiled.
full-model = []

[dependencies]
beet = { path = "../beet", features = ["net", "tungstenite", "ureq"] }
async-channel = "2"
async-lock = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = "0.4"
rand = "0.8"
serde_repr = "0.1"
bitflags = { version = "2", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-lite = "2"

[dev-dependencies]
serde_test = "1"
static_assertions = "1"
