[package]
name = "hello-discord"
version = "0.1.0"
edition = "2021"

[lib]
name = "hello_discord"
path = "src/lib.rs"

[[bin]]
name = "hello_discord"
path = "src/main.rs"
required-features = ["io"]

[features]
default = ["io", "rustls-tls"]
native-tls = ["beet/native-tls"]
rustls-tls = ["beet/rustls-tls"]
## Enable the gateway, HTTP, handlers, and Bevy bot wiring.
io = [
    "dep:async-channel",
    "dep:async-lock",
    "dep:dotenv",
    "dep:rand",
    "dep:tracing-subscriber",
    "dep:futures-lite",
    "beet/net",
    "beet/tungstenite",
    "beet/ureq",
]
## Enable oauth, poll, voice, and other large twilight-model modules we don't
## currently use. Without this, only the core types (id, user, channel, guild,
## application, http, gateway/presence, util) are compiled.
full-model = []

[dependencies]
# beet = { path = "../beet", default-features=false }
beet = { path = "../beet", default-features=false, features = ["net", "json", "tool"] }


# --- Always compiled (discord_types + events) ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
chrono = "0.4"
bitflags = { version = "2", default-features = false }
tracing = "0.1"

# --- IO feature only (discord_io: gateway, http, bot, handlers) ---
async-channel = { version = "2", optional = true }
async-lock = { version = "3", optional = true }
dotenv = { version = "0.15", optional = true }
rand = { version = "0.8", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
futures-lite = { version = "2", optional = true }

[dev-dependencies]
serde_test = "1"
static_assertions = "1"
beet = { path = "../beet", features = ["testing"] }
